Clean up Group List

--- a/ConnectFourHubs/Pages/ConnectFour.razor
+++ b/ConnectFourHubs/Pages/ConnectFour.razor
@@ -9,7 +9,7 @@
         <ul class="list-group" style="margin:auto">
             @foreach (var grp in CreatedGroups)
             {
-                <li class="list-group-item" style="font-weight:600; margin-left:20em;margin-right:20em">@grp</li>
+                <li class="list-group-item">@grp</li>
             }
         </ul>
     }
